[tool.poetry]
name = "acl2-kernel"
version = "0.4.1"
description = "Jupyter Kernel for ACL2"
authors = ["TANIGUCHI Masaya <m@docs.casa>"]
license = "Apache-2.0"
exclude = ["**/*.ipynb", "Dockerfile", ".dockerignore"]
homepage = "https://github.com/tani/acl2-kernel"
repository = "https://github.com/tani/acl2-kernel.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pexpect = "^4.9.0"
ipykernel = "^6.29.0"
jupyter_client = "^8.6.0"
ipython = "^8.26.0"
regex = "^2024.7.24"

[tool.poetry.dev-dependencies]
jupyter = "^1.1.1"
python-lsp-server = "^1.13.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry>=2"]
build-backend = "poetry.masonry.api"
